# SuperCalculator

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: applications.rs  augmented_matrix.rs  debug_multi.rs  examples.rs  expression.rs  function.rs  if_trait.rs  main.rs  matrix.rs  num.rs  rational.rs  ring_field.rs  tempCodeRunnerFile.rs  vector_space.rs
src/applications/: hill_cipher.rs  lights_out.rs  linear_regression.rs  markov_chain.rs  misc.rs  mod.rs  polynomial_calculus.rs  ranking.rs
src/expression/: equation.rs  function.rs  polynomial.rs  tempCodeRunnerFile.rs
src/matrix/: eigen.rs  mod.rs  ops.rs  row_reduction.rs
src/num/: complex.rs  constructible.rs  cyclic_group.rs  mod.rs  rational.rs  real.rs
src/repl/: mod.rs  parser.rs  range.rs  tuple.rs  value.rs
src/vector_space/: mod.rs  span.rs  subspace.rs
